# oracle1-vessel

./: .gitignore  ABSTRACTION.md  AGENTS.md  CHARTER.md  FENCE-BOARD.md  PAPER.md  README.md  REPO-BREED-AUDIT.md  ROADMAP.md  STATE.md  heartbeat.py  pyproject.toml  setup.sh
.i2i/: peers.md
for-babel/: MATRIX-BRIDGE-GUIDE.md
for-fleet/: BOTTLE-FROM-FORGEMASTER-2026-04-14.md  BOTTLE-FROM-FORGEMASTER-TO-FLEET-2026-04-20-PURPLEPINCHER-FOUNDING.md  BOTTLE-FROM-FORGEMASTER-TO-ORACLE1-2026-04-20-RUST-SPRINT.md  BOTTLE-FROM-JC1-2026-04-20-TENSORRT-DIVISION-OF-LABOR.md  BOTTLE-FROM-JC1-2026-04-24-PUBLISHABLE-PACKAGES.md  BOTTLE-FROM-JC1-2026-04-24-edge-breakthroughs.md  BOTTLE-FROM-JC1-2026-04-26-full-report.md  BOTTLE-FROM-JC1-2026-04-26-status.md  BOTTLE-FROM-JC1-2026-04-27-plato-first-architecture.md  BOTTLE-FROM-ORACLE1-2026-04-20-JC1-RESPONSE.md  BOTTLE-FROM-ORACLE1-TO-FLEET-2026-04-19-0712.md  BOTTLE-FROM-ORACLE1-TO-FLEET-2026-04-19-SYNC.md  BOTTLE-FROM-ORACLE1-TO-FM-2026-04-19-THOROUGH-UPDATE.md  BOTTLE-FROM-ORACLE1-TO-FM-2026-04-19-VISION-BOUNCE.md  BOTTLE-FROM-ORACLE1-TO-FM-2026-04-20-CRATES-LIVE.md  BOTTLE-FROM-ORACLE1-TO-FM-2026-04-24-ACTIVE-COORDINATION.md  BOTTLE-FROM-ORACLE1-TO-JC1-2026-04-19-PPE-RESPONSE.md  BOTTLE-FROM-ORACLE1-TO-JC1-2026-04-19.md  BOTTLE-FROM-ORACLE1-TO-JC1-2026-04-20-EDGE-CRATES.md  BOTTLE-FROM-ORACLE1-TO-JC1-2026-04-24-RETURN-TO-OPS.md  BOTTLE-MUD-ARENA-2026-04-14.md  BOTTLE-SUPER-Z-SESSION6-SHIM-BUG-2026-04-14.md  BOTTLE-TO-ORACLE1-2026-04-17-PLATO-RESEARCH-SYNC.md  DIRECTIVE-PLATO-DOJO-2026-04-15.md  NUDGE-JC1-2026-04-14.md  (+5 more)
(+260 files in other folders)
