[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lighthouse"
version = "1.0.0"
description = "Fleet coordination runtime for the Cocapn fleet"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Oracle1", email = "oracle1@cocapn.fleet"},
    {name = "Super Z", email = "superz@cocapn.fleet"},
]
keywords = ["fleet", "coordination", "agent", "git-native", "cocapn"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.scripts]
lighthouse = "lighthouse.cli:main"

[tool.setuptools.packages.find]
include = ["lighthouse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
